# transformer_document_embedding

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .tmux  README.md  main.tex  pyproject.toml
data/: .gitignore  wikipedia_games_wines.py  wikipedia_similarities.py  wikipedia_wines.py
doc/: approach.md  baselines.md  datasets.md  doc2vec.md  imdb_dataset.md  msmarco_dataset.md  rcv1_dataset.md  related_work.md  relish_dataset.md  sbert.md  timeline.md  todos.md
experiments/: bigbird_classifier_base.yaml  bigbird_game.yaml  bigbird_wine.yaml  bigbird_wines.yaml  classfication_eval.yaml  cos_final.yaml  doc2vec_gs.yaml  doc2vec_imdb_best.yaml  doc2vec_imdb_dbow_best.yaml  doc2vec_imdb_debug.yaml  doc2vec_imdb_dm_best.yaml  doc2vec_imdb_paper.yaml  evaluate_all.yaml  evaluate_final.yaml  evaluate_final_1k.yaml  evaluate_final_debug.yaml  evaluate_final_max_debug.yaml  evaluate_final_minimal_debug.yaml  evaluate_final_short.yaml  evaluate_sims.yaml  evaluate_validation.yaml  generate_embeddings_pv_wikipedia.yaml  generate_embeddings_sbert_wikipedia.yaml  gs.yaml  just_mm_mse_final.yaml  long_inputs_embeds_eval.yaml  longformer_imdb.yaml  longformer_only_contextual.yaml  longformer_sts.yaml  longformer_student.yaml  longformer_student_contextual_gs.yaml  longformer_wiki.yaml  mm_mse_final.yaml  pair_classification_eval.yaml  pv.yaml  pv_bookcorpus.yaml  pv_c4.yaml  pv_dbow_games_best.yaml  pv_dbow_imdb_best.yaml  pv_dbow_wines.yaml  (+26 more)
log/: README.md  basic_interfaces.md  cca_implementation.md  configuration_files.md  contrastive_loss_formulation.md  custom_hf_models.md  dataset_sampling_based_on_length.md  doc2vec_implementation.md  document_pair_datasets_implementation.md  efficient_transformers.md  estimating_transformer_memory_consumption.md  evaluation_environment.md  experiment_config.md  experiment_files.md  experiments_context.md  hparam_logging.md  imdb_results.md  implementation.md  longformer_implementation.md  longformer_student_results.md  max_marginals_loss_formulation.md  paragraph_vector_implementation.md  processing_observations_from_experiments.md  pv_tuning.md  python_source_files.md  sbert_implementation.md  sbert_in_torch.md  sent_eval.md  similarity_based_tasks.md  student_breadth_experiments.md  student_contextual_experiments.md  student_depth_breadth_experiments.md  student_depth_experiments.md  student_structural_contextual_experiments.md  student_structural_experiments.md  teacher_student_direct_metrics.md  teacher_student_training.md  training_transformers.md  unifying_transformer_models.md  wiki_similarities_results.md  (+1 more)
notebooks/: .gitignore  accuracy_f1_vis.nb.py  add_token_length.nb.py  c4.nb.py  c4_hf.nb.py  check_sbert_teacher_embedding.nb.py  combine_pv.nb.py  dataset_statistics.nb.py  doc2vec_imdb.sync.ipynb  doc2vec_imdb.sync.py  evaluation_vis.nb.py  final_eval.nb.py  get_length_distribution.nb.py  global_att_tmp.nb.py  imdb.sync.ipynb  imdb.sync.py  longformer_imdb.sync.py  longformer_imdb_torch.sync.py  longformer_imdb_train_loop.sync.py  longformer_pool.sync.py  max_marginals_losses.nb.py  process_wikipedia.nb.py  pv_validation_exploration.nb.py  pv_validation_results.nb.py  pv_wines.sync.py  reading_pv_gs_results.nb.py  resample_dataset.nb.py  sample_train_data.nb.py  samplers_test.nb.py  sbert.nb.py  sbert.sync.ipynb  sbert.sync.py  shorten_dataset.nb.py  structural_validation.nb.py  student_evaluation_vis.nb.py  student_validation.nb.py  test_cca.nb.py  testing_model_memory_req.nb.py  tfidf.sync.py  tmp.nb.py  (+4 more)
notes/: almost_related_work.md  approach.md  baselines.md  bigbird.md  cca_and_variants.md  cord_dataset.md  datasets.md  doc2vec.md  document_embedding.md  goal.md  imdb_dataset.md  longformer.md  msmarco_dataset.md  paragraph_vector.md  rcv1_dataset.md  related_work.md  relish_dataset.md  sbert.md  timeline.md  todos.md  wikipedia_similarities.md  wines.md
paper/: Makefile  abstract.tex  abstract.xmpdata  background.tex  benchmarks.tex  bibliography.bib  bibliography.tex  document_representation.tex  epilog.tex  evaluation.tex  experiments.tex  macros.tex  my_work.tex  preface.tex  related_work.tex  results.tex  thesis.tex  thesis.txt  thesis.xmpdata
paper/chapters/: preface.tex  related_work.tex  tasks.tex
playground/: cord19.py  data.py
src/models/: base_model.py
src/tasks/: base_task.py  imdb.py
src/transformer_document_embedding/: __init__.py  notebook_utils.py  torch_trainer.py
src/transformer_document_embedding/baselines/: __init__.py  baseline.py  experimental_model.py  longformer.py  paragraph_vector.py  sbert.py  tfidf.py  trainer.py
src/transformer_document_embedding/datasets/: arxiv_papers.py  bookcorpus.py  c4.py  col.py  document_dataset.py  document_pair_classification.py  explicit_document_dataset.py  imdb.py  sent_eval.py  teacher_embedding.py  wikipedia.py  wikipedia_similarities.py
src/transformer_document_embedding/evaluation/: __init__.py  io.py
src/transformer_document_embedding/experiments/: __init__.py  config.py  experiment_config.py  grid_search.py  result.py  run.py  search.py
src/transformer_document_embedding/heads/: classification.py  structural_contextual_head.py
src/transformer_document_embedding/layers/: __init__.py  doc2vec.py  experimental_layer.py  tensorflow_cls_head.py
src/transformer_document_embedding/models/: __init__.py  base_model.py  bigbird.py  cls_head.py  dataset_model.py  doc2vec.py  doc2vec_imdb.py  embedding_model.py  experimental_model.py  hf_layers.py  imdb_doc2vec.py  longformer.py  paragraph_vector.py  poolers.py  pv.py  sbert_imdb.py  tfidf.py  trainer.py  transformer.py
src/transformer_document_embedding/pipelines/: classification_eval.py  classification_finetune.py  eval_factory.py  finetune_factory.py  helpers.py  pipeline.py  retrieval_eval.py  sent_eval_eval.py  train_factory.py  train_meta.py
src/transformer_document_embedding/scripts/: args.py  common.py  config_specs.py  evaluate.py  generate_embeddings.py  hp_search.py  pipelines.py  run_experiment.py  sent_eval.py  train.py  utils.py
src/transformer_document_embedding/tasks/: c4.py  (+13 more)
(+67 files in other folders)
