[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer_document_embedding"
version = "0.0.2"
authors = [{name = "David Burian", email = "david.burian@me.com"}]
dependencies = [
  "tokenizers>=0.13",
  "transformers>=4.24",
  "tensorflow>=2.10",
  "datasets>=2.6",
  "matplotlib>=3.6",
  "gensim>=4.2",
  "torch>=1.13, <2.0", #torch 2.0 cuases hangs https://github.com/pytorch/pytorch/issues/97580
  "sentence-transformers>=2.2",
  "torcheval",
  "faiss-cpu",
  "protobuf==3.20.3",
]

[project.scripts]
evaluate_best = "transformer_document_embedding.experiments.scripts.evaluate_best:main"
hp_search = "transformer_document_embedding.experiments.scripts.hp_search:main"

[project.urls]
homepage = "https://github.com/dburian/transformer_document_embedding"
repository = "https://github.com/dburian/transformer_document_embedding"
